# prospect-finder

./: .gitignore  README.md  bozeman_prospects.json  epc_california_prospects.csv  epc_montana_prospects.csv  main.py  prospects.csv  prospects_epc_contractor_utah.csv  prospects_epc_florida.csv  prospects_solar_montana.csv  pyproject.toml  scraper.py
marketing/: package.json  pnpm-lock.yaml
marketing/app/: layout.tsx  page.tsx  sitemap.ts  theme.css  twitter-image.tsx
marketing/app/about/: page.tsx
marketing/app/api/contact/: route.ts
marketing/app/components/: AnimatedChart.tsx  Navbar.tsx
marketing/app/contact/: page.tsx
marketing/lib/: email.ts
marketing/public/: manifest.json  robots.txt
